# GloveAssist_Hand_Gesture_Acquisition_and_Detection

./: .gitattributes  .gitignore  Dockerfile.ci  README.md  esp32_build.txt  west.yml
.github/workflows/: ci.yml  ci_cd_pipeline.yml
application/common/include/: frame_protocol.h
application/common/src/: frame_protocol.c
application/esp32_app/: CMakeLists.txt  Kconfig  prj.conf  prj_wifi_mqtt.conf  prj_zephyr3.conf  prj_zephyr4.conf
application/esp32_app/boards/: esp32_devkitc_procpu.overlay  esp32_devkitc_wroom_procpu.overlay
application/esp32_app/certs/: broker_ca.pem  mosquitto_ca.pem
application/esp32_app/include/: ble_adc.h  calibration.h  gesture.h  gpio_alert.h  uart_stm32.h  wifi_mqtt.h
application/esp32_app/src/: ble_adc.c  calibration.c  gesture.c  gpio_alert.c  main.c  uart_stm32.c  wifi_mqtt.c
application/stm32_app/: CMakeLists.txt  prj.conf
application/stm32_app/boards/: stm32_min_dev.overlay  stm32_min_dev_blue.overlay
application/stm32_app/include/: adc_sensor.h  alert.h  haptic.h  uart_esp32.h
application/stm32_app/src/: adc_sensor.c  alert.c  haptic.c  main.c  uart_esp32.c
application/tests/test_adc/: CMakeLists.txt  prj.conf
application/tests/test_adc/boards/: stm32_min_dev.overlay
application/tests/test_adc/src/: main.c
ci/: quality_gates.md
docs/: EXPLICATIE_PROIECT_RO.md  NEW_ARCHITECTURE.md  PHASE1_BUILD_RESULTS.md  architecture.md  hardware_connections.md  sensor_logic_lite_v2.c
docs/01_requirements/: checkpoints_plan.md  features_and_scope.md  functional_requirements.md  system_requirements.md
docs/02_architecture/: system_architecture.md
docs/03_safety_iec/: iec_safety_plan.md
docs/04_misra_compliance/: misra_plan.md
docs/05_test_strategy/: test_strategy.md
docs/07_traceability/: requirements_traceability_matrix.md
docs/archive/v.1.0/: ARCHIVED.md  README.md
docs/archive/v.1.0/application/common/include/: app_config.h  app_secrets.h  common_types.h  error_codes.h  frame_protocol.h
docs/archive/v.1.0/application/common/src/: frame_protocol.c
docs/archive/v.1.0/application/esp32_app/: CMakeLists.txt  prj.conf  prj_test.conf  prj_wifi_mqtt.conf
docs/archive/v.1.0/application/esp32_app/boards/: esp32_devkitc_procpu.overlay
docs/archive/v.1.0/application/esp32_app/include/: comms_ble.h  gesture_classify.h  nvs_calib.h  sensor_filter.h  uart_comm.h  wifi_mqtt.h
docs/archive/v.1.0/application/esp32_app/src/: comms_ble.c  gesture_classify.c  main.c  nvs_calib.c  sensor_filter.c  uart_comm.c  wifi_mqtt.c
docs/archive/v.1.0/application/esp32_app/sysbuild/: mcuboot.conf
docs/archive/v.1.0/application/stm32_app/: CMakeLists.txt  prj.conf  prj.conf.full  prj_64kb.conf  prj_minimal.conf
docs/archive/v.1.0/application/stm32_app/boards/: stm32_min_dev.overlay  stm32_min_dev_blue.overlay
docs/archive/v.1.0/application/stm32_app/include/: calibration.h  haptic_ui.h  safety_diag.h  security.h  sensor_logic.h  uart_comm.h
docs/archive/v.1.0/application/stm32_app/src/: calibration.c  haptic_ui.c  main.c  safety_diag.c  security.c  sensor_logic.c  uart_comm.c
docs/archive/v.1.0/application/tests/test_boot_minimal/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_boot_minimal/src/: main.c
docs/archive/v.1.0/application/tests/test_buzzer/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_buzzer/src/: main.c
docs/archive/v.1.0/application/tests/test_i2c_diagnostic/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_i2c_diagnostic/boards/: stm32_min_dev_blue.overlay
docs/archive/v.1.0/application/tests/test_i2c_diagnostic/src/: main.c
docs/archive/v.1.0/application/tests/test_i2c_scan/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_i2c_scan/boards/: stm32_min_dev_blue.overlay
docs/archive/v.1.0/application/tests/test_i2c_scan/src/: main.c  main_minimal.c
docs/archive/v.1.0/application/tests/test_led/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_led/src/: main.c
docs/archive/v.1.0/application/tests/test_motor/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_motor/boards/: stm32_min_dev_blue.overlay
docs/archive/v.1.0/application/tests/test_motor/src/: main.c
docs/archive/v.1.0/application/tests/test_motor_simple/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_oled/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/application/tests/test_pb4_slow/: CMakeLists.txt  prj.conf
docs/archive/v.1.0/docs/: IMPROVEMENTS.md  PHASE1_IMPLEMENTATION_LOG.md  PROJECT_CLARIFICATION_RO.md  TESTING_GUIDE.md  fmea_analysis.md  functionality_map.md
docs/archive/v.1.0/docs/01_requirements/: nonfunctional_requirements.md
docs/archive/v.1.0/docs/archive/: Project Overview.docx  gemini_conv_p1.docx
docs/archive/v.1.0/docs/phases/: PHASE_03_misra_sweep.md  PHASE_04_thread_architecture.md  PHASE_06_ble_secure.md  PHASE_07_wifi_mqtt_cloud.md  PHASE_10_cicd_github_actions.md  PHASE_11_documentation.md  PHASE_12_adafruit_dashboard.md  PHASE_14_fault_injection.md  PHASE_15_timing_analysis.md
docs/archive/v.1.0/tests/: unit_tests.c
docs/archive/v.1.0/tests/arduino/buzzer_test/: buzzer_test.ino
docs/archive/v.1.0/tests/arduino/oled_test/: oled_test.ino
docs/archive/v.1.0/tools/: hil_uart_test.py
docs/diagrams/plantuml/: dual_mcu_components.puml  gesture_sequence.puml  system_context.puml
docs/phases/: PHASE_01_base_build.md  PHASE_05_safety_diagnostics.md  PHASE_08_lvgl_oled_pwm.md  PHASE_09_unit_tests.md  PHASE_13_hardware_in_the_loop.md  PHASE_16_power_management.md  PHASE_17_robust_calibration.md  PHASE_18_security_tls_ble.md  PHASE_19_ota_mcuboot.md
old_project/: boot.c  gestures.c  scheduler.c  tasks.c
scripts/: build_esp32.sh  build_stm32.sh  check_required_docs.ps1  e2e_ble_client.py  e2e_hardware_smoke.ps1  flash_esp32.ps1  flash_stm32.ps1  run_tests.sh  write_esp32_credentials.py
tests/: CMakeLists.txt  prj.conf  unit_tests.c
tests/arduino/motor_test/: motor_test.ino
tools/: esp32_monitor.py  power_budget.py
(+6 files in other folders)
